# AC_Lab

./: .gitignore  README.md
Lab01/: CMakeLists.txt  hash_commit.cpp  lab01_test.cpp  pedersen.cpp  shamir.cpp
Lab01/doc/: README.md
lab02/: .gitignore
lab02/01/: CMakeLists.txt  _commit.h  commit.cpp  crack.cpp  verify.cpp
lab02/02/: compile.sh  elgamal.cpp
lab02/03/: compile.sh  paillier.cpp  paillier.h
lab02/doc/: README.md
lab03/: .gitignore  CMakeLists.txt  bgn.cpp  bgn.sh  elgamal.hpp  elgamal_dis.sh  elgamal_distributed.cpp  feldman.cpp  feldman.sh  utils.hpp
lab03/doc/: REAMME.md
lab04/: .gitignore  README.md
lab04/docs/: README.md
lab04/schnorr/: CMakeLists.txt
lab04/schnorr/include/: schnorr_signature.h
lab04/schnorr/src/: main.cpp  schnorr_signature.cpp
lab04/zkp/: .gitignore  Cargo.toml  compile.sh  install.sh  temp.md  test.sh
lab04/zkp/.cargo/: config.toml
lab04/zkp/src/: challenge.rs  lib.rs  networks.rs
lab04/zkp/src/soduku/: commit.rs  mod.rs  sudoku_gen.rs
lab05/blindSign/: .gitignore  rsa_blind_sign.cpp  schnorr_blind_sign.cpp
lab05/docs/: README.md
lab05/pairingScheme/: .gitignore  BF-IBE.cpp  BF-IBE2.cpp  CMakeLists.txt  CP-ABE.cpp  FIBE.cpp  KP-ABE.cpp  common.cpp  common.h
lab06/: .gitignore
lab06/BCP/: CMakeLists.txt  bcp.cpp  utils.cpp  utils.h
lab06/PRE/: Bi-PRE.cpp  CMakeLists.txt  Uni-PRE.cpp  common.cpp  common.h  utils.cpp  utils.h
lab06/doc/: README.md
lab07/: .gitignore  Cargo.toml  build.sh
lab07/docs/: README.md
lab07/src/: lib.rs  network.rs
lab07/src/circuit/: gates.rs  mod.rs  utils.rs
lab07/src/simplest_ot/: mod.rs  ot_receiver.rs  ot_sender.rs  utils.rs
lab07/tests/: full_test.rs  test_circuit.rs  test_json.rs  test_network.rs  test_ot.rs
