[package]
name = "lab07"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "3.0.0" # deprecated
clap = { version = "4.5.53", features = ["derive"] }
elliptic-curve = "0.13.8"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdh", "serde"] }
rand = "0.9.2"
rand_core = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
